# svmLSMpy

./: .gitignore  README.md  example.py  pyproject.toml  reading_deficit_test.py
svmLSMpy/: __init__.py  covariate_correlation.py  filter_voxels_by_patient_count.py  load_lesions_and_behaviors.py  plot_mosaics.py  plot_tuning.py  regress_covariates.py  run_svm_lsm.py  save_report.py  svm_lsm.py  svr_lsm.py  task.py  util.py
tests/: baseline_svr.py  make_fixture.py  verify_routing.py  verify_svc_binary.py  verify_svc_multiclass.py  verify_svr.py
tests/fixtures/golden/: svr_best_params.txt  svr_beta_map.npy
